# impactlab-tools

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_conda.txt  requirements_dev.txt  requirements_rtd.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  whatsnew.rst
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: python-publish.yaml  pythonpackage.yaml
docs/: conf.py  configuration.rst  impactlab_tools.acp.rst  impactlab_tools.gcp.rst  impactlab_tools.rst  impactlab_tools.utils.rst  index.rst  setup.py  whatsnew.rst
docs/whatsnew/: whatsnew_template.txt
impactlab_tools/: __init__.py
impactlab_tools/acp/: aggregate.py  dist.py
impactlab_tools/assets/: ACP_county_census_pop.nc  GCP_impact_regions.nc  weights_gcp.csv
impactlab_tools/docs/: setup.py
impactlab_tools/gcp/: dist.py  reindex.py
impactlab_tools/os/: config.py  files.py  versions.py
impactlab_tools/utils/: binning.py  cache.py  configdict.py  files.py  paralog.py  spatial.py  versions.py  visualize.py  weighting.py
src/impactlab_tools/: __init__.py
src/impactlab_tools/acp/: aggregate.py  dist.py
src/impactlab_tools/assets/: hierid_regions.shx  weights_acp.csv  weights_gcp.csv
src/impactlab_tools/gcp/: dist.py  reindex.py
src/impactlab_tools/utils/: binning.py  configdict.py  (+6 more)
tests/: test_deployment.py
tests/gcp/: test_gcp_dist.py
tests/utils/: test_configdict.py  test_files.py  test_paralog.py  test_weighting.py
